pod-env-variable-env-from-config-map.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-env-variable-env-from-config-map
  labels:
     app: myapp-nginx
spec:
  containers:
    - name: nginx-container
      image: nginx
