pod-env-variable-value-from-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
     app: myapp-nginx
     env: dev
spec:
  containers:
     - name: nginx-container
       image: nginx
