pod-env-variable.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-env-variable
  labels:
     app: myapp-nginx
     env: dev
spec:
  containers:
    - name: nginx-container
      image: nginx
