pod-node-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-2
  namespace: dev
  labels:
     app: myapp-nginx
     env: dev
spec:
  containers:
     - name: nginx-container
       image: nginx
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: size
              operator: Exists
            - key: vendor
              operator: In
              values:
                - dell
            - key: disktype
              operator: NotIn
              values:
                - ssd
