pod-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-2
  namespace: dev
  labels:
     app: myapp-nginx
     env: dev
spec:
  containers:
     - name: nginx-container
       image: nginx
  nodeSelector:
      size: Large
