pod-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-volume
spec:
  containers:
      - name: container-volume
        image: nginx
        volumeMounts: 
           - mountPath: /container-data
             name: volume-container
  volumes:
    - name: volume-container
      hostPath:
          path: /data
          type: Directory
