service-basic.yml
apiVersion: v1
kind: Service
metadata:
  name: s-nginx
  labels:
    app: s-nginx
    env: prods
spec:
  type: NodePort
  ports:           
        - port: 80
          nodePort: 30001
  selector:
        app: myservice-nginx
