network-policy-ingress-cidr.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-cidr
spec:
  podSelector:
    matchLabels:
       - aLabelKey: labelValue
  policyTypes:
    - Ingress
  ingress:  
    - from:
        - ipBlock:
          cidr: 192.168.0.1/32
        ports:
          - protocol: HTTP
            port: 8080
