network-policy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
spec:
  podSelector:
    matchLabels:
       aLabelKey: labelValue
  policyTypes:
    - Ingress
  ingress:  
    - from:
      - podSelector:
          matchLabels:
            aLabelKey: labelValue
      ports:
        - protocol: TCP
          port: 8080
